use a common jpackage argument file [ci skip]